fix button issues

--- a/index.html
+++ b/index.html
@@ -43,10 +43,7 @@
                 </div>
               </div>
             </div>
-            <div id="preview-grid" class="col s6">
-
-            </div>
-            <div class="col s6 row grey-text">
+            <div class="col s6 push-s6 row grey-text">
               <h5>Run how many times?</h5>
               <div class="col s8 input-field">
                 <input type="number" id="repeats" value="" disabled placeholder="(max: 100,000)">
@@ -55,6 +52,9 @@
               <div class="col s4">
                 <button class="btn hide last-btn" type="submit" name="button">next</button>
               </div>
+            </div>
+            <div id="preview-grid" class="col s6 pull-s6">
+
             </div>
           </div>
           <div id="submit-buttons" class="row hide">
