Hard copy span codes

--- a/index.html
+++ b/index.html
@@ -111,7 +111,41 @@
                   <h6>Total run: <span class="mes-to"></span></h6>
                 </div>
                 <div class="right-align">
-                  <h5 id="mes-prob" style="visibility:hidden"></h5>
+                  <h5 id="mes-prob">
+                    <span class="mjx-chtml MJXc-display">
+                      <span class="mjx-chtml MathJax_CHTML">
+                        <span class="mjx-math" aria-hidden="true">
+                          <span class="mjx-mrow">
+                            <span class="mjx-mfrac">
+                              <span class="mjx-box MJXc-stacked" style="width: 1.2em; padding: 0px 0.12em;">
+                                <span class="mjx-numerator" style="width: 1.2em; top: -1.368em;">
+                                  <span class="mjx-mn">
+                                    <span  class="mjx-char MJXc-TeX-main-R" style="padding-top: 0.368em; padding-bottom: 0.368em;">6</span>
+                                  </span>
+                                </span>
+                                <span class="mjx-denominator" style="width: 1.2em; bottom: -0.733em;">
+                                  <span class="mjx-mn">
+                                    <span class="mjx-char MJXc-TeX-main-R" style="padding-top: 0.368em; padding-bottom: 0.368em;">18</span>
+                                  </span>
+                                </span>
+                                <span class="mjx-line" style="border-bottom: 1.6px solid; top: -0.28em; width: 1.2em;"></span>
+                              </span>
+                              <span class="mjx-vsize" style="height: 2.1em; vertical-align: -0.733em;"></span>
+                            </span>
+                            <span class="mjx-mo MJXc-space3">
+                              <span class="mjx-char MJXc-TeX-main-R" style="padding-top: 0.075em; padding-bottom: 0.331em;">=</span>
+                            </span>
+                            <span class="mjx-mn MJXc-space3">
+                              <span class="mjx-char MJXc-TeX-main-R" style="padding-top: 0.368em; padding-bottom: 0.368em;">33.33</span>
+                            </span>
+                            <span class="mjx-mi">
+                              <span class="mjx-char MJXc-TeX-main-R" style="padding-top: 0.478em; padding-bottom: 0.404em;">%</span>
+                            </span>
+                          </span>
+                        </span>
+                      </span>
+                    </span>
+                  </h5>
                 </div>
                 <div class="progress">
                   <div id="progress" class="determinate" style="width: 0%"></div>
