--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <h4 class="center-align"><span id="rule-page"></span></h4>
           </div>
           <div class="row">
-            <h3>Calculated Probability</h3>
+            <h3 class="center-align">Calculated Probability</h3>
             <div class="container row">
               <div class="col s8">
                 <div id="calculation"></div>
@@ -100,7 +100,7 @@
             </div>
           </div>
           <div class="row">
-            <h3>Observed Probability</h3>
+            <h3 class="center-align">Observed Probability</h3>
             <div class="container row">
               <div id="card-image" class="col s3">
                 <img src="http://deckofcardsapi.com/static/img/AS.png" alt="placeholder" />
@@ -150,10 +150,10 @@
             </div>
           </div>
           <div class="row">
-            <div class="col s6 right-align">
+            <div class="col s12 center-align">
               <button class="reset btn" type="button">reset</button>
+              <button id="run-again" class="btn" type="button">run again</button>
             </div>
-            <!-- run again button -->
           </div>
         </div>
       </div>
