Edit button colors

--- a/index.html
+++ b/index.html
@@ -116,10 +116,10 @@
                   <input type="range" id="speed" value="1" max="1.5" min="0.25" step="0.25">
                 </p>
                 <div class="center-align">
-                  <button class="btn" name="start">start</button>
+                  <button class="btn green" name="start">start</button>
                   <button class="hide btn red" name="pause">pause</button>
-                  <button class="btn" name="next">next card</button>
-                  <button class="btn" name="finish">finish</button>
+                  <button class="btn deep-purple" name="next">next card</button>
+                  <button class="btn deep-purple" name="finish">finish</button>
                 </div>
               </div>
               <div class="col s6">
@@ -156,7 +156,7 @@
           <div class="row">
             <div class="col s12 center-align">
               <button class="reset btn red" type="button">reset</button>
-              <button id="run-again" class="btn green" type="button">run again</button>
+              <button id="run-again" class="btn deep-purple" type="button">run again</button>
             </div>
           </div>
         </div>
