Add more icons, fix button color

--- a/about.html
+++ b/about.html
@@ -26,9 +26,15 @@
         </div>
       </nav>
     </header>
+    <main>
+      <div class="container">
+        <h3 class="center-align">About this site</h3>
 
 
-    
+        <h3 class="center-align">Resources</h3>
+
+      </div>
+    </main>
     <footer class="page-footer deep-purple">
       <div class="footer-copyright">
         <div class="container">
