--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           </div>
           <div id="submit-buttons" class="row hide">
             <div class="center-align">
-              <button class="reset red btn" type="button">reset</button>
+              <button class="reset red btn" type="button"><i class="material-icons left">clear</i>reset</button>
               <button id="modal-btn1" data-target="modal1" class="btn green">Ready?</button>
             </div>
           </div>
@@ -135,10 +135,10 @@
                   <input type="range" id="speed" value="1" max="1.5" min="0.25" step="0.25">
                 </p>
                 <div class="center-align">
-                  <button class="btn green" name="start"><i class="material-icons left">play</i>start</button>
+                  <button class="btn green" name="start"><i class="material-icons left">play_arrow</i>start</button>
                   <button class="hide btn red" name="pause"><i class="material-icons left">pause</i>pause</button>
-                  <button class="btn deep-purple" name="next">next card</button>
-                  <button class="btn deep-purple" name="finish">finish</button>
+                  <button class="btn deep-purple" name="next"><i class="material-icons left">skip_next</i>next card</button>
+                  <button class="btn deep-purple" name="finish"><i class="material-icons left">fast_forward</i>finish</button>
                 </div>
               </div>
               <div class="col s6">
@@ -174,8 +174,8 @@
           </div>
           <div class="row">
             <div class="col s12 center-align">
-              <button class="reset btn red" type="button">reset</button>
-              <button id="run-again" class="btn deep-purple" type="button">run again</button>
+              <button class="reset btn red" type="button"><i class="material-icons left">clear</i>reset</button>
+              <button id="run-again" class="btn deep-purple" type="button"><i class="material-icons left">replay</i>run again</button>
             </div>
           </div>
         </div>
