Fix array empty element problem

--- a/about.html
+++ b/about.html
@@ -32,7 +32,13 @@
 
 
         <h3 class="center-align">Resources</h3>
+        <dl class="">
+          <dt></dt>
+          <dd></dd>
 
+          <dt></dt>
+          <dd></dd>
+        </dl>
       </div>
     </main>
     <footer class="page-footer deep-purple">
