--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
     <script defer type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
     <script defer src="assets/js/data.js" charset="utf-8"></script>
-    <script defer src="assets/js/grid.js" charset="utf-8"></script>
-    <script defer src="assets/js/input-gen.js" charset="utf-8"></script>
+    <script defer src="assets/js/input.js" charset="utf-8"></script>
     <script defer src="assets/js/index.js" charset="utf-8"></script>
   </head>
   <body>
