--- a/about.html
+++ b/about.html
@@ -9,10 +9,6 @@
     <link rel="stylesheet" href="assets/css/master.css" media="screen" title="no title">
     <script defer type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
-    <script defer src="assets/js/data.js" charset="utf-8"></script>
-    <script defer src="assets/js/grid.js" charset="utf-8"></script>
-    <script defer src="assets/js/input-gen.js" charset="utf-8"></script>
-    <script defer src="assets/js/index.js" charset="utf-8"></script>
   </head>
   <body>
     <header>
@@ -29,16 +25,26 @@
     <main>
       <div class="container">
         <h3 class="center-align">About this site</h3>
-
+        <blockquote class="flow-text">
+          This site is meant as a teaching tool for probabilities of randomly occuring events. By repeating a simple random process over multiple, user-defined iterations, it demonstrates key principles of probability theory and allows for easy visualization.
+        </blockquote>
 
         <h3 class="center-align">Resources</h3>
         <dl class="">
-          <dt></dt>
-          <dd></dd>
-
-          <dt></dt>
-          <dd></dd>
+          <dt><a href="http://www.cut-the-knot.org/probability.shtml">Cut the Knot: Probability</a></dt>
+          <dd>🂡 Online resource on probability</dd>
+          <dt><a href="https://almostsure.wordpress.com/">Almost Sure</a></dt>
+          <dd>🂡 Blog on topics related to probability theory</dd>
+          <dt><a href="https://eventuallyalmosteverywhere.wordpress.com/">Eventually Almost Everywhere</a></dt>
+          <dd>🂡 Blog on topics related to probability theory</dd>
+          <dt><a href="http://www.wolframalpha.com/examples/Probability.html">Wolfram Alpha</a></dt>
+          <dd>🂡 Search engine that computes simple probabilities</dd>
+          <dt><a href="http://deckofcardsapi.com/">Deck of Cards API</a></dt>
+          <dd>🂡 Online API for generating a deck of playing cards</dd>
         </dl>
+        <div class="center-align large-link">
+          <a href="index.html">Back to main</a>
+        </div>
       </div>
     </main>
     <footer class="page-footer deep-purple">
