--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <main>
       <div id="input" class="pull-down z-depth-2 white row">
         <div class="container">
-          <h3 class="center-align">Configuration</h3>
+          <h3 class="center-align">🂡 Configuration</h3>
           <p class="center-align">
             Please start by providing the conditions for outcomes.
           </p>
@@ -82,7 +82,7 @@
           <div id="submit-buttons" class="row hide">
             <div class="center-align">
               <button class="reset red btn" type="button"><i class="material-icons left">clear</i>reset</button>
-              <button id="modal-btn1" data-target="modal1" class="btn green">Ready?</button>
+              <button id="modal-btn1" data-target="modal1" class="btn green">🂡 Ready?</button>
             </div>
           </div>
         </div>
