--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
       <div class="container">
         <h3 class="center-align">About this site</h3>
         <blockquote class="flow-text">
-          This site is meant as a teaching tool for probabilities of randomly occuring events. By repeating a simple random process over multiple, user-defined iterations, it demonstrates key principles of probability theory and allows for easy visualization.
+          This site is meant as a teaching tool for probabilities of randomly occurring events. By repeating a simple random process over multiple, user-defined iterations, it demonstrates key principles of probability theory and allows for easy visualization.
         </blockquote>
 
         <h3 class="center-align">Resources</h3>
