--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
     <meta name="description" content="A site that shuffles a deck of cards, picks one and repeats it many times.">
 
     <!-- twitter card tags -->
-    <meta name="twitter:card" content="summary_large_image">
-    <!-- <meta name="twitter:domain" value="brianjlee.net" /> -->
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:domain" value="brianjlee.net" />
     <meta name="twitter:title" value="shuffle/repeat" />
     <meta name="twitter:description" value="A site that shuffles a deck of cards, picks one and repeats it many times." />
-    <!-- <meta name="twitter:image" content="https://i.imgur.com/m6L19k8.jpg" /> -->
-    <!-- <meta name="twitter:url" value="http://www.brianjlee.net/" /> -->
+    <meta name="twitter:image" content="http://deckofcardsapi.com/static/img/AS.png" />
+    <meta name="twitter:url" value="http://project.brianjlee.net/" />
 
     <!-- facebook open graph tags -->
-    <!-- <meta property="og:url" content="http://www.brianjlee.net"/> -->
+    <meta property="og:url" content="http://project.brianjlee.net"/>
     <meta property="og:title" content="shuffle/repeat"/>
     <meta property="og:description" content="A site that shuffles a deck of cards, picks one and repeats it many times."/>
-    <!-- <meta property="og:image" content="https://i.imgur.com/m6L19k8.jpg"/> -->
+    <meta property="og:image" content="http://deckofcardsapi.com/static/img/AS.png"/>
     <meta property="og:type" content="website"/>
     <meta property="og:site_name" content="shuffle/repeat"/>
 
