--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 
     <!-- twitter card tags -->
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:domain" value="brianjlee.net" />
-    <meta name="twitter:title" value="shuffle/repeat" />
-    <meta name="twitter:description" value="A site that shuffles a deck of cards, picks one and repeats it many times." />
+    <meta name="twitter:domain" content="brianjlee.net" />
+    <meta name="twitter:title" content="shuffle/repeat" />
+    <meta name="twitter:description" content="A site that shuffles a deck of cards, picks one and repeats it many times." />
     <meta name="twitter:image" content="http://deckofcardsapi.com/static/img/AS.png" />
-    <meta name="twitter:url" value="http://project.brianjlee.net/" />
+    <meta name="twitter:url" content="http://project.brianjlee.net/" />
 
     <!-- facebook open graph tags -->
     <meta property="og:url" content="http://project.brianjlee.net"/>
