Add row displaying card history

--- a/index.html
+++ b/index.html
@@ -171,6 +171,9 @@
               </div>
             </div>
           </div>
+          <div id="card-history-row" class="row">
+
+          </div>
           <div class="row">
             <div class="col s12 center-align">
               <button class="reset btn red" type="button"><i class="material-icons left">clear</i>reset</button>
