--- a/index.html
+++ b/index.html
@@ -28,9 +28,7 @@
     <link rel="stylesheet" href="assets/css/master.css" media="screen" title="no title">
     <script defer type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
-    <script defer src="assets/js/data.js" charset="utf-8"></script>
-    <script defer src="assets/js/input.js" charset="utf-8"></script>
-    <script defer src="assets/js/index.js" charset="utf-8"></script>
+    <script defer src="main.js" charset="utf-8"></script>
   </head>
   <body>
     <header>
